css/bd-portfolio.css
/* Portfolio blocks */

#bd-portfolio-overlay {
  background-color: rgba(0, 0, 0, 0.8);
  width: 100%;
  height:100%;
  top:0;
  left:0;
  padding:0;
  margin:0;
  position:fixed;
  z-index:2;
}
#bd-portfolio-container {
  width: 100%;
  height:100%;
  top:0;
  left:0;
  padding:0;
  margin:0;
  position:relative;
  z-index:2;
}
#bdp-slider {
  position: relative;
  overflow: hidden;
  margin: 0 auto;
  border-radius: 4px;
}
#bdp-slider ul {
  position: absolute;
  margin: 0;
  padding: 0;
  list-style: none;
  display: table-row;
}
#bdp-slider ul li {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  float: left;
  margin: 0;
  padding: 0;
  background: #111;
  text-align: center;
}
#bdp-slider ul li a img {
  display: table-cell;
  vertical-align: middle;
}
#bdp-overlay-info {
  position:absolute;
  background-color: #222;
  z-index:1000;
  display:block;
  overflow:scroll;
  visibility: hidden;
  margin:0 auto;
}
#bd-portfolio-links {
  position: absolute;
  bottom: 0;
  left: 0;
  color: white;
  font-size: 0.7em;
  height: 70px;
  line-height: 70px;
  margin: 0 auto;
  text-align: center;
  z-index: 999;
  pointer-events:all;
}
a.title-active {
  color:white;
  text-decoration:none;
}
.bdp-links-separation {
  width:15px;
  text-align: center;
  vertical-align: middle;
  font-size:2em;
  display:inline-block;
}

/* Portfolio content styling */

.bdp-portrait {
  height:100%;
  width:auto;
  margin: 0 auto;
}
.bdp-landscape {
  width:100%;
  height:auto;
  margin: 0 auto;
}
a.bdp-image-slide img {
  vertical-align: middle;
}
.bdp-text-slide {
  margin: 0 auto;
  overflow-y: scroll;
}
.bdp-text {
  width:80%;
  overflow:scroll;
  color:white;
  text-align: justify;
  margin:0 auto;
  line-height:18px;
  margin-top:4%;
}
.bdp-overlay-info-content {
  width:80%;
  overflow:scroll;
  color:white;
  text-align: justify;
  margin:0 auto;
  line-height:18px;
  margin-top:4%;
}
.bdp-youtube-container {
position: relative;
width: 100%;
padding-bottom: 56.25%;
}
.bdp-youtube-container iframe {
width: 100%;
}
.bdp-yt-thumb {
  width:100%;
}
div.play-button {
  height: 72px;
  width: 72px;
  left: 50%;
  top: 33%;
  margin-left: -36px;
  margin-top: -36px;
  position: absolute;
  background: url("http://i.imgur.com/TxzC70f.png") no-repeat;
}

/* Portfolio navigation */

a.more-info, a.close {
  position: absolute;
  top: 0;
  z-index: 999;
  display: block;
  padding: 3% 3%;
  width: auto;
  height: auto;
  text-decoration: none;
  font-weight: 600;
  font-size: 18px;
  opacity: 0.8;
  cursor: pointer;
  box-shadow: 0 0 0 0 !important;
  outline:none;
}
a.control_prev, a.control_next {
  position: absolute;
  bottom: 70px;
  z-index: 999;
  display: block;
  padding: 3% 3%;
  width: auto;
  height: auto;
  text-decoration: none;
  font-weight: 600;
  font-size: 18px;
  opacity: 0.8;
  cursor: pointer;
  box-shadow: 0 0 0 0 !important;
  outline:none;
}
a.control_next {
  right: 0;
}
a.close {
  right: 0;
}
a.more-info, a.close, a.control_prev, a.control_next  {
  width: 50px;
  height: 50px;
  display: inline-block;
  background: url("../img/bdp-nav-sprite.png") no-repeat;
}
a.more-info {
  background-position: -50px top;
  z-index:1001;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
     -moz-transition:    -moz-transform 0.2s ease-in-out;
      -ms-transition:     -ms-transform 0.2s ease-in-out;
       -o-transition:      -o-transform 0.2s ease-in-out;
          transition:         transform 0.2s ease-in-out;
}
a.control_prev {
  background-position: -100px top;
}
a.control_next {
  background-position: -150px top;
}
a.control_prev:hover, a.control_next:hover, a.more-info:hover, a.close:hover {
  opacity: 1;
  -webkit-transition: all 0.2s ease;
}
.bdp-rotate {
    -webkit-transform: rotate(45deg);
       -moz-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
         -o-transform: rotate(45deg);
            transform: rotate(45deg);
}

